# url-shortener-app

./: .dockerignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
migrations/: 001_create_urls.sql
src/: config.py  main.py
src/application/ports/: repository.py
src/domain/: entities.py  services.py
src/infrastructure/adapters/db/: mysql_pool.py  mysql_repository.py
src/infrastructure/adapters/http/: controllers.py  dependencies.py  schemas.py
src/infrastructure/logging/: config.py
tests/: conftest.py  test_api.py  test_services.py
