[project]
name = "url_shortener"
version = "0.1.0"
description = "URL Shortener API"
authors = [{ name = "Theo Kergutuil", email = "theo.kergutuil@gmail.com" }]
requires-python = ">=3.11"
dependencies = [
    "aiomysql>=0.2.0",
    "cryptography>=46.0.1",
    "fastapi>=0.117.1",
    "pydantic-settings>=2.11.0",
    "pytest-asyncio>=1.2.0",
    "uvicorn>=0.37.0",
]

[dependency-groups]
dev = [
    "httpx==0.27",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "ruff>=0.13.2",
]

[tool.pytest.ini_options]
pythonpath = "."
addopts = "-v"
asyncio_mode = "auto"
